fixed horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
   background-color: var(--background-color);
   color: var(--text-color);
+  overflow-x: hidden;
 }
 .color-text-secondary {
   color: var(--text-secondary-color);
